<resources>
    <string name="app_name">DucatusApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="goalColor_hint"><b>Goal Color</b></string>
    <string name="icon_hint"><b>Icon</b></string>
    <string name="targetAmount_hint"><b>Target Amount</b></string>
    <string name="savedAlready_hint"><b>Saved Already</b></string>
    <string name="desiredDate_hint"><b>Desired Date</b></string>
    <string name="title_activity_tips_detail_video">TipsDetailVideo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edittext_hint"><font size="10">Hint here!</font></string>
</resources>